# rocrate_api

./: app.py  pyproject.toml
assets/css/: ro-crate-preview.css
assets/js/: home-button.js  ro-crate-preview.js
scripts/: motus_ro_crates_preparer.py
scripts/mgnify-ro-crates/: README.md  requirements.txt  setup.py
scripts/mgnify-ro-crates/mgnify_ro_crates/: ro_crate_ui_assets_provider.py
scripts/mgnify-ro-crates/mgnify_ro_crates.egg-info/: PKG-INFO
scripts/mgnify-ro-crates/mgnify_ro_crates/assets/css/: home-button.css
scripts/mgnify-ro-crates/tests/: test_motus_crate_preparation.py
