[tool.poetry]
name = "flask-crate-wrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
tqdm = "4.64.1"
requests = "2.27.1"
beautifulsoup4 = "4.12.3"
arcp = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
